Fix logo display - adjust brand-icon size to prevent cutoff

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         }
 
         .brand-icon {
-            width: 140px;
-            height: 50px;
+            width: 120px;
+            height: 40px;
             background: transparent;
             border-radius: 6px;
             display: flex;
@@ -79,6 +79,7 @@
             width: 100%;
             height: 100%;
             object-fit: contain;
+            object-position: left center;
         }
 
         .brand-name {
